# Imperative_programming_assignments

./: CMakeLists.txt
assignments/: assignment1.c  assignment2.c  assignment3.c  assignment4.c  exam_assignment1.c  exam_assignment2.c
assignments/exam_assignment3/: exam_assignment3.c  kampe-2024-2025.txt
