cmake_minimum_required(VERSION 3.26)
project(Imperative_programming_assignments C)

set(CMAKE_C_STANDARD 23)

add_executable(Imperative_programming_assignments main.c
        main.c)
add_executable(assignment2 assignments/assignment2.c)
add_executable(assignment1 assignments/assignment1.c)
add_executable(exam_assignment1 assignments/exam_assignment1.c)
add_executable(assignment3 assignments/assignment3.c)
add_executable(exam_assignment2 assignments/exam_assignment2.c)
add_executable(assignment4 assignments/assignment4.c)
add_executable(exam_assignment3 assignments/exam_assignment3/exam_assignment3.c)
